--- a/lab1/Client.ipynb
+++ b/lab1/Client.ipynb
@@ -18,40 +18,95 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-10-26 12:49:07,227 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=57, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('127.0.0.1', 57931), raddr=('127.0.0.1', 50007)>\n"
+      "2025-04-10 13:16:02,288 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=67, family=2, type=1, proto=0, laddr=('127.0.0.1', 32884), raddr=('127.0.0.1', 50007)>\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-10-26 12:49:07,228 - vs2lab.a1_layers.clientserver.Client - INFO - Client down.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world*\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Hello, world*'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import clientserver # import from our script\n",
     "\n",
-    "client = clientserver.Client() # Create a client instance\n",
+    "client = clientserver.Client() # Create a client instance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To run a command you need to run a cell with `client.call(\"<command>\")` where `<command>` is the command you want to run\n",
     "\n",
-    "client.call() # start the call and print echo"
+    "For example `client.call(\"GETALL\")` to get all users in the database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-10 13:16:22,228 - vs2lab.a1_layers.clientserver.Client - INFO - Received message from server:\n",
+      "\n",
+      "ERROR: Der Name darf nicht leer sein\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'ERROR: Der Name darf nicht leer sein'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.getall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get(\"Björn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.call(\"GET Chrissy R\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.call(\"GET\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you are finished you can run the cell below to close the connection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   },
   {
@@ -64,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "vs2lab-uWc7IIUF",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
