--- a/lab1/Server.ipynb
+++ b/lab1/Server.ipynb
@@ -10,24 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-10-26 12:49:00,120 - vs2lab.a1_layers.clientserver.Server - INFO - Server bound to socket <socket.socket fd=57, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('127.0.0.1', 50007)>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-10-26 12:49:07,228 - vs2lab.a1_layers.clientserver.Server - INFO - Server down.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import clientserver # import from our script\n",
     "\n",
@@ -46,7 +31,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "vs2lab-uWc7IIUF",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
